[gd_scene load_steps=5 format=2]

[ext_resource path="res://VibratingBlock.gd" type="Script" id=1]
[ext_resource path="res://Traps/trap.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.5822, 11.0714 )

[node name="VibratingBlock" type="Node2D"]
script = ExtResource( 1 )

[node name="SpikeTrapOpen" type="Sprite" parent="."]
position = Vector2( -0.122145, 11.7863 )
scale = Vector2( 0.673263, 0.783748 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 10 )
collision_layer = 16
collision_mask = 6

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, 1.648 )
shape = SubResource( 1 )

[connection signal="ready" from="." to="." method="_on_VibratingBlock_ready"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
